--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17",
     "@types/redux": "3.6.0",
     "axios": "0.21.4",
+    "install": "^0.13.0",
     "react": "^17",
     "react-dom": "^17",
     "react-redux": "7.2.5",
