--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.5.0",
+    "-": "^0.0.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/style": "^0.8.0",
     "@emotion/styled": "11.3.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
     "@mui/icons-material": "5.0.5",
-    "@mui/material": "5.0.6",
+    "@mui/material": "^5.10.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +21,10 @@
     "@types/react-dom": "^17",
     "@types/redux": "3.6.0",
     "axios": "0.21.4",
+    "bootstrap": "^5.2.0",
     "install": "^0.13.0",
-    "react": "^17",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17",
     "react-redux": "7.2.5",
     "react-router-dom": "6",
